# audio-pilot

./: .env.example  .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/artists/: route.ts
app/api/generate/: route.ts
app/api/similar/: route.ts
app/synth/: page.tsx
backend/: main.py  requirements.txt
lib/: matcher.ts  presets.ts  sound-generator.ts  tag-fetcher.ts
spaces/: Dockerfile  README.md  app.py  requirements.txt
spaces/static/: index.html
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
